# monkey-ml

./: LICENSE  README.md  build.zig  build.zig.zon  dprint.json  dune-project  example.monkey  flake.nix  monkey-ml.opam  monkeylang.opam
.helix/: languages.toml
lib/: ast.ml  builtin.ml  dune  environment.ml  environment.mli  evaluator.ml  evaluator.mli  lexer.ml  lexer.mli  parser.ml  parser.mli  precedence.ml  repl.ml  token.ml  value.ml
src/: main.zig  root.zig
test/: dune  test_ast.ml  test_evaluator.ml  test_lexer.ml  test_monkey_ml.ml  test_monkeylang.ml  test_parser.ml
